<resources>
    <string name="app_name">BitSplit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_bill">AddBillActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_personal_recent_bills">Recent Bills</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_group_name">GROUP NAME</string>
    <string name="title_group_members">Members</string>

    <string-array name="bills">
        <item>Italian dinner -- 50.90</item>
    </string-array>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_login">Log in</string>

    <string name="action_logout">Log Out</string>
    <string name="euro_sign">€</string>
    <string name="placeholder_0">0</string>
    <string name="title_add_shares">Shares</string>
    <string name="title_add_paid_by">Paid by</string>
    <string name="action_save_bill">Save bill</string>
    <string name="err_amount">How much did you spend?</string>
    <string name="err_description">What did you pay?</string>
    <string name="err_shares">Who are you sharing this bill with?</string>
    <string name="err_name_join">What is the name of the group you want to join?</string>
    <string name="err_name_create">What is the name of the group you want to create?</string>
    <string name="err_group_notexist">This group does not exist</string>
    <string name="join_group_text">Already have a group? Just type the group\'s name and join your friends.</string>
    <string name="create_group_text">You can easily create a new group and invite your friends.</string>
    <string name="create_group_title">Don\'t have a group yet?</string>
    <string name="button_join_group">Join Group</string>
    <string name="button_create_a_group">Create a Group</string>
    <string name="join_group_title">Join existing group</string>
    <string name="hint_description">Description</string>
</resources>
