<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bdumeljic.billsplitter.AddBillActivity"
    tools:showIn="@layout/activity_add_bill"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Display2"
            android:text="@string/euro_sign"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Display2"
            android:inputType="number|numberDecimal"
            android:layout_marginLeft="@dimen/text_margin"
            android:textAlignment="textEnd"
            android:hint="0.00" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/bill_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:paddingBottom="@dimen/text_margin"
            android:paddingTop="@dimen/text_margin"
            android:hint="Description" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/title_add_paid_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/secondary_text_default_material_light"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/keyline_16dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/bill_paid_photo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/keyline_16dp"
                android:paddingRight="@dimen/keyline_16dp"
                android:layout_toRightOf="@+id/bill_paid_photo"
                android:layout_toEndOf="@+id/bill_paid_photo"
                android:layout_centerVertical="true"
                android:id="@+id/bill_paid_name"
                android:text="name" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/title_add_shares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/secondary_text_default_material_light"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_shares"
            tools:listitem="@layout/members_list_item" />
    </LinearLayout>

</LinearLayout>
