<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bdumeljic.billsplitter.GroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/keyline_16dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_group_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:paddingTop="@dimen/keyline_16dp"
                    android:id="@+id/group_name" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/keyline_16dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/placeholder_0"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/keyline_16dp"
                        android:paddingRight="@dimen/keyline_16dp"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:id="@+id/group_number_members" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="MEMBERS"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/keyline_16dp"
                        android:paddingRight="@dimen/keyline_16dp"
                        android:textColor="@color/secondary_text_default_material_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/keyline_16dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/placeholder_0"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/keyline_16dp"
                        android:paddingRight="@dimen/keyline_16dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        android:id="@+id/group_number_bills" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="BILLS"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/keyline_16dp"
                        android:paddingRight="@dimen/keyline_16dp"
                        android:textColor="@color/secondary_text_default_material_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/keyline_16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/euro_sign"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/keyline_16dp"
                        android:paddingRight="@dimen/keyline_16dp"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:id="@+id/group_spent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="SPENT"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/keyline_16dp"
                        android:paddingRight="@dimen/keyline_16dp"
                        android:textColor="@color/secondary_text_default_material_light" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_recent_bills"
            android:layout_gravity="center"
            android:layout_margin="@dimen/keyline_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/title_group_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/text_margin" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_recent_bills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>
